[gd_scene load_steps=17 format=3 uid="uid://djfg4elox5cqy"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_wuxr1"]
[ext_resource type="Texture2D" uid="uid://d1i1tdrpsk133" path="res://Sprite Pack 2/2 - Mr. Mochi/Hurt (32 x 32).png" id="2_7cbil"]
[ext_resource type="Texture2D" uid="uid://d4efgvkmmus7r" path="res://Sprite Pack 2/2 - Mr. Mochi/Idle (32 x 32).png" id="2_yj4me"]
[ext_resource type="Texture2D" uid="uid://cpf352oedoq8" path="res://Sprite Pack 2/2 - Mr. Mochi/Jumping (32 x 32).png" id="3_i05um"]
[ext_resource type="Texture2D" uid="uid://da81cm5666op4" path="res://Sprite Pack 2/2 - Mr. Mochi/Running (32 x 32).png" id="4_f2oyi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_b844k"]
atlas = ExtResource("2_yj4me")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iy1ff"]
atlas = ExtResource("2_yj4me")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ty10c"]
atlas = ExtResource("3_i05um")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rctdp"]
atlas = ExtResource("4_f2oyi")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fj2ew"]
atlas = ExtResource("4_f2oyi")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdkbr"]
atlas = ExtResource("4_f2oyi")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v31ej"]
atlas = ExtResource("4_f2oyi")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ypspf"]
animations = [{
"frames": [{
"duration": 10.0,
"texture": ExtResource("2_7cbil")
}],
"loop": true,
"name": &"Hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b844k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iy1ff")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ty10c")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rctdp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fj2ew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdkbr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v31ej")
}],
"loop": true,
"name": &"Run",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cdqjq"]
size = Vector2(12, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_018tc"]
size = Vector2(16, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_up2fn"]
size = Vector2(15.5, 5.5)

[node name="Player" type="CharacterBody2D"]
collision_mask = 94
script = ExtResource("1_wuxr1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -9)
sprite_frames = SubResource("SpriteFrames_ypspf")
animation = &"Idle"
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_cdqjq")

[node name="Animator" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite2D")

[node name="hurtbox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4

[node name="collision2" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(0, -3.5)
shape = SubResource("RectangleShape2D_018tc")
debug_color = Color(0.8, 0.345098, 0.615686, 0.419608)

[node name="remote" type="RemoteTransform2D" parent="."]

[node name="ray_right" type="RayCast2D" parent="."]
position = Vector2(8, 0)
target_position = Vector2(4, 0)
collision_mask = 4

[node name="ray_left" type="RayCast2D" parent="."]
position = Vector2(-8, 0)
target_position = Vector2(-4, 0)
collision_mask = 4

[node name="head_collider" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="head_collision" type="CollisionShape2D" parent="head_collider"]
position = Vector2(0.25, -9)
shape = SubResource("RectangleShape2D_up2fn")

[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_entered" from="head_collider" to="." method="_on_head_collider_body_entered"]
